--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 *{
-    margin:0;
+    margin: 0;
     padding: 0;
 }
- 
+
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #000
+    background-color: #000;
 }
 
 .container{
@@ -14,7 +14,7 @@ body{
 }
 
 header{
-    color: #fff;
+    color: #FFF;
     background-color: #48c5ce;
     text-align: center;
     padding: 10px;
@@ -22,5 +22,17 @@ header{
 
 .title{
     font-size: 26px;
-    text-transform: uppercase; 
+    text-transform: uppercase;
+}
+
+section{
+    color: #FFF;
+}
+
+section h2{
+    text-transform: uppercase;
+}
+
+section p{
+    text-align: justify;
 }
