--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ header{
 
 section{
     color: #FFF;
+    background-image: url("../imagens/people.jpg");
+    padding: 20px;
+    overflow: hidden;
+    background-size:cover ;
 }
 
 section h2{
@@ -35,4 +39,27 @@ section h2{
 
 section p{
     text-align: justify;
+}
+
+.formContainer{
+    max-width: 230px;
+    float: right;
+    padding: 20px
+
+.mb{
+    margin-bottom: 15px;
+}
+
+input, select{
+    width: 100%;
+    border: none;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+input[type="submit"]{
+    color: white;
+    background-color: #48c5ce;
+    font-weight: bold;
 }
